[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/UI/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/NumberNew.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/HUD/Background.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/HUD/HpProgress.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/HUD/XpProgress.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/HUD/XpFlash.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/HUD/HpLost.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/HUD/CooldownProgress.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/HUD/GlassBars.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/HUD/HpCap.png" type="Texture" id=10]
[ext_resource path="res://src/UI/HUD/GunIcon.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/UI/HUD/XpMax.png" type="Texture" id=13]
[ext_resource path="res://assets/UI/NumberSmall.png" type="Texture" id=14]
[ext_resource path="res://assets/UI/HUD/HpLostCap.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Flash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "XpFlash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("XpBar/XpFlash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="HUD" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 1 )
anims/XpFlash = SubResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 16, 32 )
texture = ExtResource( 3 )
centered = false

[node name="HpBar" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 272.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpLost" type="TextureProgress" parent="HpBar"]
margin_left = 48.0
margin_top = 35.0
margin_right = 86.0
margin_bottom = 39.0
mouse_filter = 2
value = 50.0
texture_progress = ExtResource( 7 )

[node name="HpLostCap" type="Sprite" parent="HpBar/HpLost"]
position = Vector2( 19, 2 )
texture = ExtResource( 15 )

[node name="HpProgress" type="TextureProgress" parent="HpBar"]
margin_left = 48.0
margin_top = 35.0
margin_right = 86.0
margin_bottom = 39.0
mouse_filter = 2
value = 50.0
texture_progress = ExtResource( 4 )

[node name="HpCap" type="Sprite" parent="HpBar/HpProgress"]
position = Vector2( 19, 2 )
texture = ExtResource( 10 )

[node name="Num1" type="Sprite" parent="HpBar"]
position = Vector2( 28, 32 )
texture = ExtResource( 2 )
centered = false
hframes = 11
vframes = 6
frame = 64

[node name="Num2" type="Sprite" parent="HpBar"]
position = Vector2( 36, 32 )
texture = ExtResource( 2 )
centered = false
hframes = 11
vframes = 6
frame = 64

[node name="LostTween" type="Tween" parent="HpBar"]

[node name="XpBar" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 272.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XpProgress" type="TextureProgress" parent="XpBar"]
margin_left = 44.0
margin_top = 43.0
margin_right = 83.0
margin_bottom = 47.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XpFlash" type="Sprite" parent="XpBar"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 44, 43 )
texture = ExtResource( 6 )
centered = false

[node name="Num" type="Sprite" parent="XpBar"]
position = Vector2( 36, 44 )
texture = ExtResource( 2 )
hframes = 11
vframes = 6
frame = 56

[node name="XpMax" type="Sprite" parent="XpBar"]
visible = false
position = Vector2( 41, 42 )
texture = ExtResource( 13 )
centered = false

[node name="CooldownBar" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 272.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="CooldownBar"]
margin_left = 41.0
margin_top = 51.0
margin_right = 78.0
margin_bottom = 53.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 8 )

[node name="GlassBars" type="Sprite" parent="."]
position = Vector2( 16, 32 )
texture = ExtResource( 9 )
centered = false

[node name="Gun" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 272.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 32
custom_constants/margin_bottom = 16

[node name="HBox" type="HBoxContainer" parent="Gun"]
margin_left = 32.0
margin_top = 16.0
margin_right = 464.0
margin_bottom = 256.0
rect_min_size = Vector2( 64, 16 )
mouse_filter = 2

[node name="WeaponIcon" parent="Gun/HBox" instance=ExtResource( 11 )]
margin_right = 32.0
margin_bottom = 240.0

[node name="AmmoCount" type="Control" parent="Gun/HBox"]
margin_left = 36.0
margin_right = 36.0
margin_bottom = 240.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divider" type="Sprite" parent="Gun/HBox/AmmoCount"]
position = Vector2( 33, 5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -9, -5 )
hframes = 11
vframes = 6
frame = 21

[node name="Divider2" type="Sprite" parent="Gun/HBox/AmmoCount/Divider"]
position = Vector2( -8, 8 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -9, -5 )
hframes = 11
vframes = 6
frame = 21

[node name="Num1" type="Sprite" parent="Gun/HBox/AmmoCount"]
position = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 11
vframes = 6
frame = 1

[node name="Num2" type="Sprite" parent="Gun/HBox/AmmoCount"]
position = Vector2( 12, 4 )
texture = ExtResource( 2 )
hframes = 11
vframes = 6

[node name="Num3" type="Sprite" parent="Gun/HBox/AmmoCount"]
position = Vector2( 20, 4 )
texture = ExtResource( 2 )
hframes = 11
vframes = 6

[node name="Num4" type="Sprite" parent="Gun/HBox/AmmoCount"]
position = Vector2( 28, 12 )
texture = ExtResource( 2 )
hframes = 11
vframes = 6
frame = 12

[node name="Num5" type="Sprite" parent="Gun/HBox/AmmoCount"]
position = Vector2( 36, 12 )
texture = ExtResource( 2 )
hframes = 11
vframes = 6
frame = 11

[node name="Num6" type="Sprite" parent="Gun/HBox/AmmoCount"]
position = Vector2( 44, 12 )
texture = ExtResource( 2 )
hframes = 11
vframes = 6
frame = 11

[node name="MoneyCount" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 272.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num1" type="Sprite" parent="MoneyCount"]
position = Vector2( 24, 51 )
texture = ExtResource( 14 )
centered = false
offset = Vector2( 0, -1 )
hframes = 10
vframes = 2
frame = 10

[node name="Num2" type="Sprite" parent="MoneyCount"]
position = Vector2( 28, 51 )
texture = ExtResource( 14 )
centered = false
offset = Vector2( 0, -1 )
hframes = 10
vframes = 2
frame = 10

[node name="Num3" type="Sprite" parent="MoneyCount"]
position = Vector2( 32, 51 )
texture = ExtResource( 14 )
centered = false
offset = Vector2( 0, -1 )
hframes = 10
vframes = 2
frame = 10
